tests/ui/parser/inner-attr-after-doc-comment.stderr
error: an inner attribute is not permitted following an outer doc comment
  --> $DIR/inner-attr-after-doc-comment.rs:6:1
   |
LL | / /**
LL | |  * My module
LL | |  */
   | |___- previous doc comment
LL |
LL |   #![recursion_limit="100"]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^ not permitted following an outer doc comment
LL |
LL |   fn main() {}
   |   ------------ the inner attribute doesn't annotate this function
   |
   = note: inner attributes, like `#![no_std]`, annotate the item enclosing them, and are usually found at the beginning of source files

error: aborting due to 1 previous error

